--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-  /* body > header {
+/* body > header{
     position: fixed;
-    top: 0;
- } */
-  
+    top :0;
+} */
   body > footer {
     position: fixed;
     bottom: 0;
@@ -35,30 +34,21 @@ nav{
     letter-spacing: 1px;
     cursor: pointer;
 }
-/* ul{
-    display: fixed;
-} */
 nav ul li{
     list-style-type: none;
     display: inline-block;
     padding: 10px 25px;
-    /* display: fixed; */
-
 }
 nav ul li a{
     color: white;
     text-decoration: none;
     text-transform: capitalize;
-    /* display: fixed; */
 }
 nav ul li a:hover{
     color: red;
     transition:4s;
 
 }
-/* #fixed{
-    position: fixed;
-} */
 .btn{
     background-color: red;
     color: white;
@@ -91,7 +81,6 @@ h2{
 #belindanabudde-image{
     height: auto;
     width:430px;
-    /* padding-top:300px ; */
 }
 .about-text{
     width:550px;
@@ -118,7 +107,6 @@ h2{
     text-transform:capitalize
 }
 #para-1{
-
     color:white;
     font-size: 18px;
     margin-bottom:45px
@@ -128,7 +116,6 @@ h2{
     background: #101010;
     width:100%;
     padding-bottom: 50px;
-    /* padding: 100px 0px; */
 }
 .title-project h2{
     color: white;
@@ -185,7 +172,39 @@ h2{
 .box h3{
     color: blue;
 }
+.feed-back{
+    width:100%;
+    height:50vh;
+    background:#191919;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.feed-back h2{
+    color:white;
+    font-size: 30px;
+    font-weight:bold;
+    margin-bottom:25px;
+}
+.feed-back textarea{
+    width: 60%;
+    height:20vh;
+    border-radius: 10px;
+}
+.feed-back .button1{
+    background-color: red;
+    color:white;
+    text-decoration: none;
+    border:2px solid transparent;
+    font-weight:bold;
+    padding:13px 30px;
+    border-radius: 30px;
+    margin-top: 20px;
+    margin-bottom: 80px;    
+}
 footer{
+    margin-top: 30px;
     position: relative;
     width:100%;
     height: 10vh;
