--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* body > header{
-    position: fixed;
-    top :0;
-} */
   body > footer {
     position: fixed;
     bottom: 0;
@@ -15,29 +11,23 @@
 .hero{
     height:100vh;
     width:100%;
-    background-image: url(./bel-image.jpg);
-    background-size:cover;
+    background-image: url(./beli-image.jpg);
+    background-size:contain;
     background-position: center;
 }
 nav{
+    width: 100%;
+    background-color: rgb(25, 27, 27);
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 45px;
-    padding-left: 8%;
-    padding-top: 8%;
-    position: fixed;
-}
-.logo{
-    color: white;
-    font-size: 35px;
-    letter-spacing: 1px;
-    cursor: pointer;
+    padding-top: 30px;    
 }
 nav ul li{
-    list-style-type: none;
+    
     display: inline-block;
-    padding: 10px 25px;
+    padding-left: 200px;
 }
 nav ul li a{
     color: white;
@@ -47,7 +37,6 @@ nav ul li a{
 nav ul li a:hover{
     color: red;
     transition:4s;
-
 }
 .btn{
     background-color: red;
@@ -65,6 +54,9 @@ nav ul li a:hover{
     transform:translatey(-50%);
     height: 50vh;
 }
+#heading1{
+    color: white;
+}
 h1{
     color:blue; 
     margin: 20px 0 20px;
@@ -75,12 +67,15 @@ h2{
 }
 .about{
     width:100%;
-    padding: 100px opx;
     background-color: #191919;
+    padding-top: 50px;
 }
 #belindanabudde-image{
-    height: auto;
-    width:430px;
+    border-radius: 15%;
+    height: 500px;
+    width:500px;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 .about-text{
     width:550px;
@@ -93,14 +88,17 @@ h2{
     align-items:center;
     justify-content:space-around;
 }
-.about-text h1{
+ .about-text h2{
+     padding-bottom: 25px;
     color:white;
     font-size: 75px;
     text-transform: capitalize;
-    margin-bottom:20px;
-}
+    /* margin-bottom:20px; */
+    /* position: center; */
+} 
 .about-text h5{
     color:white;
+    padding-top: 25px;
     letter-spacing:2px;
     font-size: 22px;
     margin-bottom:25px;
@@ -109,8 +107,8 @@ h2{
 #para-1{
     color:white;
     font-size: 18px;
-    margin-bottom:45px
-    font-family 'Raleway', sans-serif;
+    margin-bottom:45px;
+    font-family: 'Josefin Sans',sans-serif;
 }
 .projects{
     background: #101010;
@@ -138,7 +136,6 @@ h2{
     background-color: #191919;
     border-radius: 20px;
     margin:15px;
-    position: relative;
     overflow:hidden;
     text-align: center;
 }
@@ -167,7 +164,7 @@ h2{
 }
 .box p{
     color: bisque;
-    font-family: 'Astloch', cursive;
+    font-family: 'Josefin Sans',sans-serif;
 }
 .box h3{
     color: blue;
@@ -235,3 +232,93 @@ footer{
     width:25px;
     height:25px
 }
+/* @media(max-width:800px) {
+    .hero{
+        height:100vh;
+        width:100%;
+        background-image: url(./beli-image.jpg);
+        background-size:cover;
+        background-position: center;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    padding-top: 85px;
+    padding-left: 20%;
+    padding-top: 20%;
+    font-size: larger;
+    position: fixed;
+}
+.logo{
+    color: white;
+    font-size: 35px;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 25px; 
+}
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: larger;
+} 
+.content{
+    position:absolute;
+    top:50%;
+    left:8%;
+    transform:translatey(-50%);
+    height: 50vh;
+}
+h1{
+    color:blue; 
+    padding-top: 300px;
+    font-size: 50px;  
+}
+h2{
+    display: none;
+}
+
+.about{
+    width:80%;
+    /* padding: 100px opx; */
+    /* background-color: #191919;
+}
+#belindanabudde-image{
+    /* height: auto; */
+    /* display: block; */
+    /* width:475px;
+    height: 300px;
+}
+.about-text{
+    width:550px;
+    padding-left: 25px;
+    font-size: larger;
+   
+}
+.main{
+    width:1130px;
+    max-width:95%;
+    margin:0 auto;
+    align-items:center;
+    justify-content:space-around;
+}
+.about-text h1{
+    color:white;
+    font-size: 75px;
+    text-transform: capitalize;
+    margin-bottom:20px;
+}
+.about-text h5{
+    color:white;
+    letter-spacing:2px;
+    font-size: 22px;
+    margin-bottom:25px;
+    text-transform:capitalize
+}
+
+}  */  
